@@ -1,5 +1,8 @@
 2007-08-30 Thu  Jari Aalto  <jari dot aalto A T cante dot net>
 
+	* etc/template/install.tar.options.tmp: 1.4 Added example for new
+	option: --include
+
 	* bin/cygbuild.pl (Version): 1.257 Correct handling of complex
 	package name foo-1.80+dbg-0.61.tar.gz
 
@@ -14,6 +17,10 @@
 	(function CygbuildMakefilePrefixCheck()): 1.937 Check
 	if there already is custom install.sh and do not display
 	message about it.
+	(function CygbuildInstallTaropt2match ()): 1.937 Added input
+	parameter $type, which control if exclude or include is wanted.
+	(function CygbuildInstallPackageDocs()): 1.937 Support new
+	--include from install.tar.options
 
 2007-08-29 Wed  Jari Aalto  <jari dot aalto A T cante dot net>
 
